优化，前端聊天页重构，AI 生成链路优化蓝图与实施状态后端重构：见OPTIMIZATION_BLUEPRINT_STATUS.md